@@ -1,5 +1,5 @@
 <metadata>
-    <version>2001</version>
+    <version>2002</version>
     <dependencies>
         <dependency>profile-plone.app.dexterity:default</dependency>
         <dependency>profile-plone.app.registry:default</dependency>
